science fiction in chapter 1

--- a/chap1.tex
+++ b/chap1.tex
@@ -1,15 +1,94 @@
 \chapter{Sources and Ideologies}
 
-Ideologies (and their stakes) (visions/histories) (32 p)
+%% 2. Where is that coming from?
+%% -Sci-fi and historical dreama
+%% -a cultural vision of automation of work
+%% -AI history
+%% -NHTSA/SAE policy/standards (instantiated in)
+%% -researchers in the field!
 
-2. Where is that coming from?
--Sci-fi and historical dreama
--a cultural vision of automation of work
--AI history
--NHTSA/SAE policy/standards (instantiated in)
--researchers in the field!
+The popular narratives about self-driving vehicles cannot have come from
+the ether. But what are their roots? What are the sources from which
+these stories come, the founts of technological ideology from which
+they spring? Journalistic accounts of technological change are of
+course impacted by a wide variety of practices and perspectives, from
+the market and readership needs of news organizations to the pervasive
+culture of commodity scientism.\cite{???-smithCommodityScientism} The
+reasons for why these stories are the way they are may be innumerable
+and difficult to pin down. But specifically regarding the ways that
+driverless cars are figured in the press as autonomous machines, there
+are a number of identifiable sources for these modes of writing and
+ideological connections: science fiction, factory automation,
+artificial intelligence, and engineering and policy documents. Each,
+in its turn, impacts the popular narrative in specific and important
+ways, which must be understood if we are to come to grips with the
+question of why we are receiving a particular story.
 
 \subsection{Science Fictions, Historical Dreams}
+
+Science fiction is a perennial source of popular metaphors and ideas
+about technological change, in part perhaps because the visions are so
+compelling, but also because they are so easily available. While they
+too do not issue forth from a vacuum, coming from a potent combination
+of actual engineering and scientific developments mixed with fervent imagination,
+science-fiction images represent easily-digestible cultural reference
+points for technological stories. From Asimov to \emph{Terminator},
+these sorts of pictures are endemic to discussions of Artificial
+Intelligence in the press. Visions of robotic drivers are cut from the
+same cloth. Stories and ideas about what autonomous cars will be are
+influenced by \emph{Minority Report}, \emph{KITT}, and \emph{Total
+  Recall}.\cite{???} Countless articles begin by describing
+self-driving vehicles as a Hollywood or science-fiction
+staple.\cite{???-http://seekingalpha.com/article/2798325-a-window-into-a-driverless-future-from-science-fiction-to-reality} 
+
+Many, indeed most, articles seem ignorant of the actual research
+history. Some bring up the pioneering work done by Mercedes and Ernst
+Dickmanns in Germany in the 1990s.\cite{???} But few connect
+autonomous vehicles today as part of a long research history going
+back to the 1960s, and an even longer set of engineering dreams going
+back at least to the 1920s. Such narratives would be at least as
+valid, in their own way, as connections to science fiction, but I
+suggest that some of the shock value of the technology would be lost
+by linking it to a deep history of research and effort. Connecting it
+instead to the dreams and aspirations of Hollywood cinema makes it
+more novel, exciting, even magical. And that hype fits the business
+goals of many news outlets interested only in pageviews.
+
+But despite this paucity of historical grounding, certain historically-specific
+dreams do filter through into the narratives of autonomous technology
+through the media of popular culture and fiction. The Jetsons, though
+the show did not actually envision driverless vehicles, get
+remembered due to their flying cars, which trigger similar visions of wild
+futures made possible through technology.\cite{???} GM's Firebird III, from a
+similar era, is remembered due to its publicity campaign and
+subsequent cultural presence,\cite{???-http://www.fool.com/investing/general/2013/12/22/google-vs-tesla-vs-ford-who-has-the-best-self-driv.aspx} despite that the vehicle actually
+contained no autonomous technology of any kind.\cite[p. ???]{wetmore} It was
+itself an engineering fiction. 
+
+<CAN I FIND A THIRD EXAMPLE???>
+
+These fictions are powerful because they do not answer to logic and
+sense. They draw upon emotions, hopes, aspirations. Driverless cars
+are in part works of theater, objects of technological spectacle which
+are not yet truly real, despite their existence as physical objects
+which can be photographed and written in. Special press events are hosted to allow journalists
+to ride in these vehicles.\cite{???} Their capabilities touted,
+advertised, but their media picture tightly controlled. Not subsumed
+to the mundane, the quotidian, they still possess that magic that
+makes science fiction connections obvious and compelling. But that
+does not mean such connections are unproblematic. Far from it. By
+their alignment of these vehicles to science fiction, popular
+narratives curry forward those pictures of the technology already
+envisioned, and obscure the multitude of potential implementations
+that can emerge from engineering practice in the moment. Self-driving
+cars threaten to become natural and obvious, in a particular form,
+through their associations with existing, known and culturally
+assimilated media portrayals.
+
+But there are other historical images that are part and parcel of
+popular autonomous vehicle narratives, ones that are not connected
+with vehicles at all. And among these is the assimilated cultural
+understanding of the history of factory labor and the automation of work.
 
 \subsection{Accepted Stories of the Automation of Work}
 %% 1.1) deep history is the mechanization/automation of work (4 p)
