added notes on ch 1/3 questions

--- a/chap1.tex
+++ b/chap1.tex
@@ -7,6 +7,10 @@
 %% -NHTSA/SAE policy/standards (instantiated in)
 %% -researchers in the field!
 
+%%Consider including both sides in automation of work, AI history, and
+%%NHTSA/SAE! That way everything is consistent & in one place
+
+
 The popular narratives about self-driving vehicles cannot have come from
 the ether. But what are their roots? What are the sources from which
 these stories come, the founts of technological ideology from which
