--- a/chap3.tex
+++ b/chap3.tex
@@ -2,13 +2,18 @@
 
 Technological Realities (27 p)
 
-4. What other stories are there?
--HSC
--real history of automation of work
--other autonomy research
---researchers in the field
--some stakes (data) are still applicable, but others may be
-ameliorated
+%% 4. What other stories are there?
+%% -HSC
+%% -real history of automation of work
+%% -other autonomy research
+%% --researchers in the field
+%% -some stakes (data) are still applicable, but others may be
+%% ameliorated
+
+%% if this will still be long enough, consider eliminating automation
+%% and AI from this section and moving them back to ch 1. then these
+%% alternative narratives are really not all the alts, but they are
+%% those alts that are pretty much never referenced . . . 
 
 
 \subsection{The Untold History of the Automation of Work}
