--- a/chap3.tex
+++ b/chap3.tex
@@ -1,4 +1,4 @@
-\chapter{Alternate Narratives}
+\chapter{Hybrid Vehicles, Hybrid Narratives}
 
 Technological Realities (27 p)
 
@@ -471,6 +471,17 @@ actually is.
 
 
 \subsection{Human Supervisory Control}
+
+—while Hutchins' cockpit
+remembers its speeds through a combination of human activity and
+physical cognitive aids,\cite{???} the NHTSA's “vehicle” may sometimes “not
+perform a control function.”\cite{???}
+
+ref back to NHTSA/SAE; starting from P. 9 of the DM paper: The documentation of the Google car's Nevada driving test
+exposes fractures in the traditional perspectives on vehicle
+automation.\cite{???} 
+
+As a way to INTRODUCE HSC, actually
 
 \subsection{Lessons from Autonomy Research}
 
