beginnning of last ch1 section added

--- a/chap1.tex
+++ b/chap1.tex
@@ -142,7 +142,6 @@ primarily those rooted in the cultural consciousness, rather than in
 nuanced, factual histories.
 
 <INCLUDE MORE ACTUAL HISTORY>
-<Wiener's automated factory from the 1950s>
 
 The early areas of automation which get picked-up by popular attention
 include the textile mills of the early 1800s, in which a large
@@ -174,6 +173,31 @@ relations.\cite{???-nyeAmericas} actual historical circumstances are
 not the point. What matters is the general perception that automated
 systems, such as the robotic arms used for painting and assembly, are
 reducing the overall pool of available jobs.
+
+Norbert Wiener, the famous cyberneticist, was asked to contribute to an
+anniversary supplement on automatic machinery for the St. Louis
+Post-Dispatch in 1953. The piece that he wrote, ``The Machine as Threat
+and Promise''\cite{???-wienerMachineThreat} hailed the coming of the
+robotic factory with his usual 
+caution and good sense, but confirmed that ``automatic machinery of a
+new sort is assuredly here to stay,'' machines that are ``coupled to the
+outer world through the mechanical equivalents of sense organs.'' The
+article's photographs by Edward J. Burkhardt, displayed above the
+sub-heading, ``The Only Automation Plant in the World,'' show the
+machinery of the Rockford Ordinance Plant in Rockford, Illinois, and
+the men who tend them. The tenders, largely stoic and inactive, stand
+and observe, sit quietly at machines, or push buttons on control
+panels, surrounded by the motion of the ``largely automatic process of
+turning steel bars into 155 millimetre
+shells.''\cite{???-wienerMachineThreat} Around the same time, in Ford
+Motor Company's Brooks Park engine plants, near Cleveland, forty-two
+automatic machines ``linked together by transfer devices that
+automatically move the blocks through the complete process, perform
+530 precision cutting and drilling operations.''\cite[p.
+  9]{dieboldImpact} Through the 1,545 feet of assembly line, no human
+touched the parts. Such is the vision of the automated factory. In
+truth an operator stood by each machine, ensuring its continued
+operation. But this human labor, menial as it may be, is not often recognized.
 
 This narrative of automation progress was once the province of
 blue-collar labor only, but is now moving into white-collar work as
@@ -290,7 +314,7 @@ Automata of this era ``bled,'' ``defecated,'' and ``breathed,'' though some
 of these functions were themselves faked, such as in the case of
 Vaucanson's Duck. Nevertheless, imitation was central to the project,
 and in this way these early automata prefigured at least some of the
-developments in AI and Alife. These attempts, though little known and
+developments in AI and Alife. These early simulacra, though little known and
 rarely referenced today, provide critical background for the attempts
 that followed. 
 
@@ -326,7 +350,9 @@ sensing and acting in the manner of a
  as outcomes of systems that pass messages internally. In this way
  cybernetics is a forerunner of the discipline of
  artificial intelligence, which is interested in re-creating many of the same
- self-regulating systems within computer systems. This replacement of
+ self-regulating systems within computer systems---and which claims a
+ similarly broad explanatory role, whether the goal is chess,
+ investing, or driving a vehicle. This replacement of
  competencies tends toward the obsolescence of the human being, and
  again is interpreted in many stories as a teleological process, a
  perpetual advancement of technological competencies.
@@ -339,7 +365,8 @@ over the past 50 years, often with deep-seated
 ambivalences.\footnote{Ekbia's book does an excellent job
   exploring and cataloging many of these, more than I have space for.
   But logical and neorobotic approaches appear most relevant as
-  broad-strokes historical precursors for inclusion here.} Ideas fade
+  broad-strokes historical precursors for inclusion here. They will be
+dealt with more fully in \ref{chap3}} Ideas fade
 and resurface as fashions change, and greater computational power
 allows ``failed'' techniques to be tried anew. But much of this
 history is presently unappreciated outside of the discipline. Ours is the age of
@@ -351,7 +378,8 @@ applied---it really just means a return of neural
 networks,\footnote{These systems still have little or nothing to do
   with actual neurons; they are brain-like in only the barest
   toy-model sort of way, despite how they are often represented in the
-  press} which, armed with some improvements in weight generation, more layers of
+  press.} which, armed with some improvements in weight generation,
+more layers of
 nodes, and more data to train with, have been able to eclipse many of
 the previous techniques\cite{???}.
 
@@ -687,7 +715,23 @@ automation? These are questions to which we will return in \ref{chap3}.
 
 \subsection{Researchers in the Field}
 
-<use interview material, and material from talks>
+Finally, the statements of researchers themselves are responsible for
+shaping conventional narratives of autonomous vehicle development.
+Since they have the potential to reshape many areas of life, it should
+be no surprise that a cross-section of researchers interested in the
+issue is broad indeed. Some are engineers, including those whose
+papers have made it into the news. Others are mathematicians and
+computer scientists working on problems ostensibly related to
+autonomous vehicle systems. And yet others are designers and urban
+planners interested in how the next generation of vehicle systems will
+affect our cities.
+
+Daniela Rus & the complexity researcher at the MIT Conference
+
+Interview material from MIT
+
+Papers
+
 
 
 %% 3) (or worked in to each of the previous) current research
