--- a/chap3.tex
+++ b/chap3.tex
@@ -187,6 +187,9 @@ can be used both to routinize work---for the manual laborer---and to
 eliminate the routine in favor of the creative---for managers and newly
 generated classes of creative workers. 
 
+<Return to Brooks Park and the Wiener shell plant>
+
+
 %% Noble cites 330, 330
 Automation may look very different depending on where in the hierarchy
 a person happens to fall, but the historical lesson is that human
