--- a/intro.tex
+++ b/intro.tex
@@ -45,6 +45,18 @@ the popular press
 ---but this is a flawed picture of the future, and an incomplete
 picture of the tech
 
+>One vision is that these are coming in 2-5 years; law just needs to
+>get out of the way
+>Another is that there are big problems to be solved, the technology
+>isn't there
+-both suggest moral /ethical/legal quandaries
+HOWEVER nobody (popularly) seems to dispute what the object is that is
+>being discussed, or how else it might look. both these narratives
+>tend to take a particular technological picture and either support it
+>or illustrate its problems
+
+
+
 3) and shift to the lead-in to the main thesis sections: 
 KEY QUESTIONS: What are the stories we are hearing vs. Other ones out
 there, why? and what are the stakes for these stories?
