small edits to outline

--- a/chap1.tex
+++ b/chap1.tex
@@ -1,4 +1,6 @@
 \chapter{Sources and Ideologies}
+>Narratives and Counternarratives
+
 
 %% 2. Where is that coming from?
 %% -Sci-fi and historical dreama
