--- a/chap3.tex
+++ b/chap3.tex
@@ -1,14 +1,20 @@
-\chapter{Hybrid Vehicles, Hybrid Narratives}
+\chapter{Hybrid Controls, Hybrid Possibilities}
 
 Technological Realities (27 p)
 
-%% 4. What other stories are there?
+%% 4. What is the alternative to the teleological progression implicit
+%% in the for- and against- stories?
+%% (start with story of planes [the backing off from full autonomy] or Mars rovers or something
 %% -HSC
-%% -real history of automation of work
-%% -other autonomy research
-%% --researchers in the field
+%% -Autonomy research from other areas
+%% -envision some alternatives
 %% -some stakes (data) are still applicable, but others may be
 %% ameliorated
+
+%% 4. What other stories are there?
+%%( -real history of automation of work
+%% -other autonomy research
+%% --researchers in the field)
 
 %% if this will still be long enough, consider eliminating automation
 %% and AI from this section and moving them back to ch 1. then these
