--- a/intro.tex
+++ b/intro.tex
@@ -54,6 +54,7 @@ HOWEVER nobody (popularly) seems to dispute what the object is that is
 >being discussed, or how else it might look. both these narratives
 >tend to take a particular technological picture and either support it
 >or illustrate its problems
+>''if you are asked to take control, we've failed''
 
 
 
